mule-user-guide/v/3.4/streaming-data-processing-with-datamapper.adoc
= Streaming Data Processing with DataMapper

Especially useful when working with large datasets, Anypoint DataMapper supports streaming data input and output. For example, when reading information from a very large input file, you can use streaming you avoid having DataMapper load the whole file into memory. Instead, DataMapper works as a pipeline: it sequentially reads the file and store the data in a cache, performs data mapping, sends the output to the next transformer, empties the cache, then begins again. Using this procedure, DataMapper can parse a 500 MB CSV file using only about 75 MB of RAM, resulting in significant improvements in performance and resources utilization.

* Anypoint DataMapper streaming supports CSV and fixed width input and output formats.
* You can configure the size of the stream cache to optimize for performance.

== Assumptions

This document assumes the reader is familiar with the Anypoint DataMapper Transformer. If you are not, start from the beginning:  link:https://docs.mulesoft.com/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper User Guide and Reference]. For a listing of all available tools in DataMapper, consult link:https://docs.mulesoft.com/mule-user-guide/v/3.4/datamapper-visual-reference[DataMapper Visual Reference].


== Setting Streaming in DataMapper

. To set the *Streaming* parameter in your data mapping flow, click the *Properties* icon at the top-right of the DataMapper view, to open the *Pattern Properties* window. 
+
image:properties.png[properties]

. Click *Streaming*.
. In the *Pipe Size* input field, enter the desired size of the cache. The default is 2048.
* When working with files, the value of *Pipe Size* is expressed in bytes. 
* When working with collections, the value is expressed in number of collection elements.
+
image:streaming.png[streaming]

=== Handling Exceptions

If an exception occurs in the mapping, DataMapper stops the streaming engine as soon as possible. To avoid undesired consequences in case of failure (such as inserting only part of a row into a database) use link:https://docs.mulesoft.com/mule-user-guide/v/3.4/transactions-configuration-reference[Transactions].

== Example

This example illustrates the use of the Streaming feature in Anypoint DataMapper.

An link:https://docs.mulesoft.com/mule-user-guide/v/3.4/http-endpoint-reference[HTTP Endpoint] receives a CSV file, then passes it to DataMapper. DataMapper maps the input data from CSV to POJO. A link:https://docs.mulesoft.com/mule-user-guide/v/3.4/database-jdbc-endpoint-reference[Database (JDBC) Endpoint] inserts the data into an external database.  In this scenario, DataMapper and the Database endpoint work in parallel as a pipeline, further improving application performance.

image:flow2.png[flow2]

The image below displays the DataMapper view as configured for this example.

image:dmview2.png[dmview2]

Finally, the JDBC output endpoint receives the list of maps, then incorporates each item as a value in the SQL query for the external database.

[source, code, linenums]
----
INSERT INTO Persons (name, city, email, phone) VALUES (#[payload.name], #[payload.city], #[payload.email], #[payload.phone])
----
