mule-user-guide/v/3.6/streaming-data-processing-with-datamapper.adoc
= Streaming Data Processing with DataMapper
:keywords: datamapper

[NOTE]
DataMapper will continue to be fully supported in all current and future versions of Mule ESB 3.x, however it will be removed in Mule 4.0. We recommend that if you wish to take advantage of the new capabilities of link:https://docs.mulesoft.com/mule-user-guide/v/3.8/dataweave[DataWeave] or if you start new projects, upgrade now. However, if you have no pressing need to take advantage of new functionality, we recommend you wait until Mule 4.0 is released.


Especially useful when working with large datasets, Anypoint DataMapper supports streaming data input and output. For example, when reading information from a very large input file, you can use streaming you avoid having DataMapper load the whole file into memory. Instead, DataMapper works as a pipeline: it sequentially reads the file and store the data in a cache, performs data mapping, sends the output to the next transformer, empties the cache, then begins again. Using this procedure, DataMapper can parse a 500 MB CSV file using only about 75 MB of RAM, resulting in significant improvements in performance and resources utilization.

* Anypoint DataMapper streaming supports CSV and fixed width input and output formats.
* You can configure the size of the stream cache to optimize for performance.

== Assumptions

This document assumes the reader is familiar with the Anypoint DataMapper Transformer. If you are not, start from the beginning:  link:https://docs.mulesoft.com/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper User Guide and Reference]. For a listing of all available tools in DataMapper, consult link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-visual-reference[DataMapper Visual Reference].

 View DataMapper Documentation Table of Contents

* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-concepts[DataMapper Concepts]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-visual-reference[DataMapper Visual Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/defining-datamapper-input-and-output-metadata[Defining DataMapper Input and Output Metadata]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/defining-metadata-using-edit-fields[Defining Metadata Using Edit Fields]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/pojo-class-bindings-and-factory-classes[POJO Class Bindings and Factory Classes]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/building-a-mapping-flow-in-the-graphical-mapping-editor[Building a Mapping Flow in the Graphical Mapping Editor]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/mapping-flow-input-and-output-properties[Mapping Flow Input and Output Properties]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-input-error-policy-for-bad-input-data[DataMapper Input Error Policy for Bad Input Data]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/using-datamapper-lookup-tables[Using DataMapper Lookup Tables]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/streaming-data-processing-with-datamapper[Streaming Data Processing with DataMapper]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/updating-metadata-in-an-existing-mapping[Updating Metadata in an Existing Mapping]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/mapping-elements-inside-lists[Mapping Elements Inside Lists]
* link:https://docs.mulesoft.com/anypoint-studio/v/5/previewing-datamapper-results-on-sample-data[Previewing DataMapper Results on Sample Data]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-examples[DataMapper Examples]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-supplemental-topics[DataMapper Supplemental Topics]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/choosing-mel-or-ctl2-as-scripting-engine[Choosing MEL or CTL2 as Scripting Engine]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-fixed-width-input-format[DataMapper Fixed Width Input Format]
** link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper Flat-to-Structured and Structured-to-Flat Mapping]

== Setting Streaming in DataMapper

To set the Streaming parameter in your data mapping flow, follow these steps:

. In the DataMapper view, click the *Properties* icon (highlighted below).
+
image:datamapper1.png[image]

. DataMapper displays the general configuration dialog, shown below. Click *Streaming*.
+
image:datamapper2.png[image]

.  In the *Pipe Size* input field, enter the desired size of the cache. The default is 2048. Bear in mind that:
* When working with files, the value of *Pipe Size* is expressed in bytes
* When working with collections, the value is expressed in number of collection elements

=== Handling Exceptions

If an exception occurs in the mapping, DataMapper stops the streaming engine as soon as possible. To avoid undesired consequences in case of failure (such as inserting only part of a row into a database) use link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transactions-configuration-reference[Transactions].

== Example

This example illustrates the use of the Streaming feature in Anypoint DataMapper.

An link:https://docs.mulesoft.com/mule-user-guide/v/3.6/http-connector[HTTP Connector] receives a CSV file, then passes it to DataMapper. DataMapper maps the input data from CSV to POJO. A link:https://docs.mulesoft.com/mule-user-guide/v/3.6/database-connector[Database Connector] inserts the data into an external database.  In this scenario, DataMapper and the Database connector work in parallel as a pipeline, further improving application performance.

image:datamapper3.jpeg[3]

The image below displays the DataMapper view as configured for this example.

image:datamapper4.jpeg[4]

Finally, the output connector receives the list of maps, then incorporates each item as a value in the SQL query for the external database.

[source, code, linenums]
----
INSERT INTO Persons (name, city, email, phone) VALUES (#[payload.name], #[payload.city], #[payload.email], #[payload.phone])
----
